Text changes in the landing page.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="header__content">
         <h2>EMPOWERING HEALTHCARE DECISIONS WITH AI</h2>
-        <h1>YOUR PERSONALIZED SYMPTOM MANAGEMENT SOLUTION</h1>
+        <h1>YOUR PERSONALIZED HEALTH ASSISTANT</h1>
         <p>
           Connecting you to the nearest care while keeping your personal doctor informed with your consent.
         </p>
